--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "serve-favicon": "~2.3.0"
   }
 }
