--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.7.0",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "wordpos": "^1.1.5"
   }
 }
